--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,3 +1,11 @@
-<p>
-  new-project-description works!
-</p>
+<div class="center">
+    <form>
+        <h1>Projekt titel</h1>
+        <input type="text" name="projectName" value="" id="title">
+        <br>
+        <h2>Projekt Beskrivelse</h2>
+        <textarea rows="4" cols="50" name="ProjectDescription" id="Description">Beskriv dit projekt...</textarea>
+        <br>
+        <input type="submit" value="Submit" id="confirmBttn">
+    </form>
+</div>
