Become a programmer, they said. It'll be fun, they said.

--- a/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
+++ b/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
@@ -1,3 +1,15 @@
-<p>
-  project-navigation works!
-</p>
+<!-- NAME -->
+<div>
+  <div >
+    <h3 class="projectName">{{projectName}}</h3>
+    <span style="margin-left: 120px;">
+      <div class="icon"></div>
+      <div class="icon"></div>
+      <div class="icon"></div>
+    </span>
+
+  </div>
+</div>
+
+<button (click)="callUpdate()">FORCE NAME UPDATE</button>
+<!-- THREE BUTTONS FOR NEWPROJECTVIEW -->
