--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -3,5 +3,6 @@
 <button (click)="funfunc()">Hello</button>
 <router-outlet></router-outlet> -->
 <app-test></app-test>
+<app-project-view></app-project-view>
 <!-- <p>HEY</p> -->
 <!-- <router-outlet></router-outlet> -->
