--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,6 +1,9 @@
 <!--The content below is only a placeholder and can be replaced.-->
+<app-navigation></app-navigation>
+
 <app-new-project-description></app-new-project-description>
 <button (click)="funfunc()">Hello</button>
+
 <router-outlet></router-outlet> -->
 <app-test></app-test>
 <!-- <p>HEY</p> -->
