--- a/angular-app/src/app/navigation/navigation.component.css
+++ b/angular-app/src/app/navigation/navigation.component.css
@@ -1,22 +1,10 @@
 body {margin:0;}
 
 .topBar {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: #333;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  height: 50px;
-  
-}
-
-.backButton {
   float: left;
-}
-
-.logOut {
- float: right;
+  margin: auto;
+  width: 50%;
+  height: 50%;
+  text-align: right;
+  margin-top: 5%;
 }
