--- a/angular-app/src/app/navigation/navigation.component.html
+++ b/angular-app/src/app/navigation/navigation.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
       <div class="col-sm-4">
-        <button type="button">Go back</button>
+        <button type="button" class="backButton">Go back</button>
       </div>
       <div class="col-sm-4">
         <h3>SociAnalysis</h3>
