Project description page functionality should be up and running

--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,11 +1,12 @@
 <div class="center">
     <form>
         <h1>Projekt titel</h1>
-        <input type="text" name="projectName" value="" id="title">
-        <br>
+        <input type="text" name="projectName" value="" id="title" [(ngModel)]="title">
+        <br><br>
         <h2>Projekt Beskrivelse</h2>
-        <textarea rows="4" cols="50" name="ProjectDescription" id="Description">Beskriv dit projekt...</textarea>
+        <textarea rows="4" cols="50" name="ProjectDescription" id="Description" [(ngModel)]="description">Beskriv dit projekt...</textarea>
         <br>
-        <input type="submit" value="Submit" id="confirmBttn">
+        <input type="submit" value="Videre" id="confirmBttn" (click)="getTitle()" (click)="getDesc()">
     </form>
 </div>
+
