--- a/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
+++ b/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
@@ -1,12 +1,12 @@
 <!-- NAME -->
-<div>
-  <div >
-    <h3 class="projectName">{{projectName}}</h3>
-    <span style="margin-left: 120px;">
+<div class= "navigator">
+  <div class= "container">
+    <div class="projectName">{{projectName}}</div>
+    <div class="icon-container">
       <div class="icon"></div>
       <div class="icon"></div>
       <div class="icon"></div>
-    </span>
+    </div>
 
   </div>
 </div>
