Can now login + Get groups!

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -3,8 +3,9 @@
 
 <app-new-project-description></app-new-project-description>
 <button (click)="funfunc()">Hello</button>
+<button (click)="helloGroupsWorld()" mat-raised-button>GetGroups</button>
 
-<router-outlet></router-outlet> -->
+<router-outlet></router-outlet>
 <app-test></app-test>
 <!-- <p>HEY</p> -->
 <!-- <router-outlet></router-outlet> -->
