--- a/angular-app/src/app/navigation/navigation.component.css
+++ b/angular-app/src/app/navigation/navigation.component.css
@@ -1,10 +1,8 @@
-body {margin:0;}
-
-.topBar {
-  float: left;
-  margin: auto;
-  width: 50%;
-  height: 50%;
-  text-align: right;
-  margin-top: 5%;
+.example-fill-remaining-space {
+  /* This fills the remaining space, by using flexbox. 
+     Every toolbar row uses a flexbox row layout. */
+  flex: 1 1 auto;
+}
+.navigationBar {
+ position: fixed;
 }
