--- a/angular-app/src/app/navigation/navigation.component.html
+++ b/angular-app/src/app/navigation/navigation.component.html
@@ -1,14 +1,6 @@
-<div class="container">
-    <div class="row">
-      <div class="col-sm-4">
-        <button type="button" class="backButton">Go back</button>
-      </div>
-      <div class="col-sm-4">
-        <h3>SociAnalysis</h3>
-      </div>
-      <div class="col-sm-4">
-        <p>The user loggedin</p>
-        <button type="button">Log ud</button>
-      </div>
-    </div>
-    </div>
+  <mat-toolbar color="primary" class="navigationBar">
+      <button>Go back</button>
+      <!-- This fills the remaining space of the current row -->
+      <span class="example-fill-remaining-space"></span>
+      <button>LogOut</button>
+    </mat-toolbar>
