Auto stash before merge of "master" and "origin/master"

--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,4 +1,4 @@
-<div class="center">
+<div class="center" *ngIf="projectGroupToggle; else groupP">
     <form>
         <h1>Projekt titel</h1>
         <input type="text" name="projectName" value="" id="title" [(ngModel)]="title">
@@ -6,7 +6,11 @@
         <h2>Projekt Beskrivelse</h2>
         <textarea rows="4" cols="50" name="ProjectDescription" id="Description" [(ngModel)]="description">Beskriv dit projekt...</textarea>
         <br>
-        <input type="submit" value="Videre" id="confirmBttn" (click)="getTitle()" (click)="getDesc()">
+        <input type="submit" value="Videre" id="confirmBttn" name="videreKnap" [(ngModel)]="projectGroupToggle" (click)="makefalse()" (click)="getTitle()" (click)="getDesc()" >
     </form>
 </div>
+
+<ng-template #groupP>
+<app-new-project-groups> </app-new-project-groups>
+</ng-template>
 
