--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
@@ -1,3 +1,11 @@
-<p>
-  new-project-groups works!
-</p>
+<div id="groupP">
+<div id="leftBox">
+<h1>Tilgængelige grupper</h1>
+
+</div>
+
+<div id=rightBox>
+<h1>Valgte grupper</h1>
+
+</div>
+</div>
