Routing untill new project + login/out system

--- a/angular-app/src/app/app.component.html
+++ b/angular-app/src/app/app.component.html
@@ -1,12 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<app-navigation></app-navigation>
+<app-navigation *ngIf="navigationservice.getNavi"></app-navigation>
 <router-outlet></router-outlet>
 
-<app-new-project-description></app-new-project-description>
-<button (click)="funfunc()">Hello</button>
+
+<!--<button (click)="funfunc()">Hello</button>
 <button (click)="helloGroupsWorld()" mat-raised-button>GetGroups</button>
-
-<router-outlet></router-outlet>
-<app-test></app-test>
-<!-- <p>HEY</p> -->
-<!-- <router-outlet></router-outlet> -->
+-->
