--- a/angular-app/src/app/home-view/home-view.component.html
+++ b/angular-app/src/app/home-view/home-view.component.html
@@ -1,3 +1,6 @@
-<p>
-  home-view works!
-</p>
+<div class="left">
+  <app-new-project></app-new-project>
+</div>
+<div class="right">
+  <app-project-list></app-project-list>
+</div>
