--- a/angular-app/src/app/navigation/navigation.component.html
+++ b/angular-app/src/app/navigation/navigation.component.html
@@ -1,6 +1,10 @@
+
   <mat-toolbar color="primary" class="navigationBar">
       <button>Go back</button>
-      <!-- This fills the remaining space of the current row -->
       <span class="example-fill-remaining-space"></span>
-      <button>LogOut</button>
-    </mat-toolbar>
+      <button (click)="logoutOfFacebook()">LogOut</button>
+  </mat-toolbar>
+
+  <div class="addMargin"></div>
+
+
