Added list to project

--- a/angular-app/src/app/home-view/project-list/project-list.component.html
+++ b/angular-app/src/app/home-view/project-list/project-list.component.html
@@ -1,3 +1,6 @@
-<p>
-  project-list works!
-</p>
+
+<mat-list>
+  <mat-list-item *ngFor="let project of projects" (click)='selectProject(project)' >
+      <a> Test 1</a>
+  </mat-list-item>
+</mat-list>
