--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,16 +1,33 @@
 <div class="center" *ngIf="projectGroupToggle; else groupP">
     <form>
+        <mat-form-field class="textTitle">
+            <input matInput placeholder="Titel" value="" name="projectName" [(ngModel)]="title">
+        </mat-form-field>
+        <br><br><br>
+        <mat-form-field class="textBox">
+            <textarea matInput placeholder="Beskrivelse" name="ProjectDescription" id="Description"
+                [(ngModel)]="description"></textarea>
+        </mat-form-field>
+        <br><br><br>
+        <input type="submit" value="Videre" id="confirmBttn" name="videreKnap" [(ngModel)]="projectGroupToggle"
+            (click)="makefalse()" (click)="getTitle()" (click)="getDesc()">
+    </form>
+</div>
+
+<ng-template #groupP>
+    <app-new-project-groups> </app-new-project-groups>
+</ng-template>
+
+<!--<form >
         <h1>Projekt titel</h1>
-        <input type="text" name="projectName" value="" id="title" [(ngModel)]="title">
+        <mat-form-field class="textInput" >
+        <input name="projectName" value="" [(ngModel)]="title">
         <br><br>
+        </mat-form-field>
+
         <h2>Projekt Beskrivelse</h2>
         <textarea rows="4" cols="50" name="ProjectDescription" id="Description" [(ngModel)]="description">Beskriv dit projekt...</textarea>
         <br>
         <input type="submit" value="Videre" id="confirmBttn" name="videreKnap" [(ngModel)]="projectGroupToggle" (click)="makefalse()" (click)="getTitle()" (click)="getDesc()" >
     </form>
-</div>
-
-<ng-template #groupP>
-<app-new-project-groups> </app-new-project-groups>
-</ng-template>
-
+-->
