--- a/angular-app/src/app/project-view/project-view.component.html
+++ b/angular-app/src/app/project-view/project-view.component.html
@@ -1,3 +1,3 @@
-<p>
-  project-view works!
-</p>
+<mat-toolbar color="accent">Fun</mat-toolbar>
+
+<app-query-setting-view></app-query-setting-view>
