Renamed filter to selector

--- a/angular-app/src/app/project-view/project-navigation/project-navigation.component.css
+++ b/angular-app/src/app/project-view/project-navigation/project-navigation.component.css
@@ -15,8 +15,7 @@
     padding-right: 40px;
 }
 .container{
-    height: 100%;
-
+    padding: 5px;
     display: table;
     border-spacing: 10px 0px;
     margin-left: 0;
