--- a/angular-app/src/app/project-view/project-view.component.html
+++ b/angular-app/src/app/project-view/project-view.component.html
@@ -1,3 +1,3 @@
 <!-- Navigation bar -->
 <app-project-navigation></app-project-navigation>
-<app-query-filter></app-query-filter>
+<app-query-selector></app-query-selector>
