--- a/angular-app/src/app/home-view/project-list/project-list.component.html
+++ b/angular-app/src/app/home-view/project-list/project-list.component.html
@@ -1,6 +1,6 @@
-
-<mat-list>
-  <mat-list-item *ngFor="let project of projects" (click)='selectProject(project)' >
-      <a> Test 1</a>
+<mat-nav-list>
+  <mat-list-item *ngFor="let project of projects" (click)='this.directoryservice.selectedProject=project; selectProject(project.name)' >
+      <a matLine>{{project.name}}</a>
+      <p matLine> {{project.desc}}</p>
   </mat-list-item>
-</mat-list>
+</mat-nav-list>
