+ input field + directoryservice -> getQuery, getProject

--- a/angular-app/src/app/project-view/project-view.component.html
+++ b/angular-app/src/app/project-view/project-view.component.html
@@ -1,4 +1,4 @@
-<app-query-setting-view></app-query-setting-view>
 <app-project-navigation></app-project-navigation>
+<!-- <app-query-setting-view></app-query-setting-view> -->
 <app-query-selector></app-query-selector>
 
