--- a/angular-app/src/app/navigation/navigation.component.css
+++ b/angular-app/src/app/navigation/navigation.component.css
@@ -5,10 +5,12 @@
 }
 .navigationBar {
   top: 0;
-  position: fixed;
+  position: sticky;
+  position: -webkit-sticky;
   z-index: 3000;
+  width: 100%;
 }
 .addMargin{
-  height: 10vh;
+  /* height: 9vh; */
 }
 
