Can now switch between project description and project groups
Event emitters, yay!

--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
@@ -1,4 +1,4 @@
-<div id="groupP">
+<div class="vLine"></div>
 <div id="leftBox">
 <h1>Tilgængelige grupper</h1>
 
@@ -8,4 +8,4 @@
 <h1>Valgte grupper</h1>
 
 </div>
-</div>
+
