--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,4 +1,4 @@
-<div class="center" *ngIf="projectGroupToggle; else groupP">
+<div class="center" >
     <form>
         <mat-form-field class="textTitle">
             <input matInput placeholder="Titel" value="" name="projectName" [(ngModel)]="title">
@@ -9,25 +9,10 @@
                 [(ngModel)]="description"></textarea>
         </mat-form-field>
         <br><br><br>
-        <input type="submit" value="Videre" id="confirmBttn" name="videreKnap" [(ngModel)]="projectGroupToggle"
-            (click)="makefalse()" (click)="getTitle()" (click)="getDesc()">
+        <input type="submit" value="Videre" id="confirmBttn" name="" 
+            (click)="showNext()" (click)="getTitle()" (click)="getDesc()">
     </form>
 </div>
 
-<ng-template #groupP>
-    <app-new-project-groups> </app-new-project-groups>
-</ng-template>
 
-<!--<form >
-        <h1>Projekt titel</h1>
-        <mat-form-field class="textInput" >
-        <input name="projectName" value="" [(ngModel)]="title">
-        <br><br>
-        </mat-form-field>
 
-        <h2>Projekt Beskrivelse</h2>
-        <textarea rows="4" cols="50" name="ProjectDescription" id="Description" [(ngModel)]="description">Beskriv dit projekt...</textarea>
-        <br>
-        <input type="submit" value="Videre" id="confirmBttn" name="videreKnap" [(ngModel)]="projectGroupToggle" (click)="makefalse()" (click)="getTitle()" (click)="getDesc()" >
-    </form>
--->
