Refactor factories, revisit visitors

--- a/angular-app/src/app/home-view/new-project/new-project.component.html
+++ b/angular-app/src/app/home-view/new-project/new-project.component.html
@@ -1,1 +1,1 @@
-<button (click)="createNewProject()">Opret nyt projekt</button>
+<button class="newProject" (click)="createNewProject()">Opret nyt projekt</button>
