--- a/angular-app/src/app/navigation/navigation.component.html
+++ b/angular-app/src/app/navigation/navigation.component.html
@@ -1,8 +1,8 @@
 
   <mat-toolbar color="primary" class="navigationBar">
-      <button>Go back</button>
+      <button (click)="goBack()">Gå tilbage</button>
       <span class="example-fill-remaining-space"></span>
-      <button (click)="logoutOfFacebook()">LogOut</button>
+      <button (click)="logoutOfFacebook()">Log ud</button>
   </mat-toolbar>
 
   <div class="addMargin"></div>
