--- a/angular-app/src/app/login-view/login-view.component.css
+++ b/angular-app/src/app/login-view/login-view.component.css
@@ -1,3 +1,11 @@
 .error{
     color: red;
 }
+
+.loginButton{
+    position: fixed;
+    width: 30%;
+    height: 15%;
+    margin-left: 35%;
+    margin-top: 100px;
+}
