--- a/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
+++ b/angular-app/src/app/project-view/project-navigation/project-navigation.component.html
@@ -8,7 +8,7 @@
       <div class="icon"></div>
 
     </div>
-    <button (click)="callUpdate()">FORCE NAME UPDATE</button>
+    <!-- <button (click)="callUpdate()">FORCE NAME UPDATE</button> -->
   </div>
 </div>
 
