--- a/angular-app/src/app/project-view/project-view.component.html
+++ b/angular-app/src/app/project-view/project-view.component.html
@@ -1,4 +1,1 @@
-<app-project-navigation></app-project-navigation>
-<!-- <app-query-setting-view></app-query-setting-view> -->
-<app-query-selector></app-query-selector>
-
+<app-query-view></app-query-view>
