--- a/angular-app/src/app/project-view/query-view/query-view.component.html
+++ b/angular-app/src/app/project-view/query-view/query-view.component.html
@@ -1,3 +1,9 @@
-<p>
-  query-view works!
-</p>
+<app-project-navigation></app-project-navigation>
+<div class="query-selector-container">
+    <app-query-selector class="query-selector"></app-query-selector>
+</div>
+
+
+<div class="query-menu-container">
+    <app-query-menu class="query-menu"></app-query-menu>
+</div>
