Can now navigate to project overview. Also added some CSS
Still looks shit though.

--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,18 +1,33 @@
-<div class="center" >
-    <form>
-        <mat-form-field class="textTitle">
-            <input matInput placeholder="Titel" value="" name="projectName" [(ngModel)]="title">
-        </mat-form-field>
-        <br><br><br>
-        <mat-form-field class="textBox">
-            <textarea matInput placeholder="Beskrivelse" name="ProjectDescription" id="Description"
-                [(ngModel)]="description"></textarea>
-        </mat-form-field>
-        <br><br><br>
-        <input type="submit" value="Videre" id="confirmBttn" name="" 
-            (click)="showNext()" (click)="getTitle()" (click)="getDesc()">
-    </form>
+<div class="center">
+  <form>
+    <mat-form-field class="textTitle">
+      <input
+        matInput
+        placeholder="Titel"
+        value=""
+        name="projectName"
+        [(ngModel)]="title"
+      />
+    </mat-form-field>
+    <br /><br /><br />
+    <mat-form-field class="textBox">
+      <textarea
+        matInput
+        placeholder="Beskrivelse"
+        name="ProjectDescription"
+        id="Description"
+        [(ngModel)]="description"
+      ></textarea>
+    </mat-form-field>
+    <br /><br /><br />
+    <input
+      type="submit"
+      value="Videre"
+      id="confirmBttn"
+      name=""
+      (click)="showNext()"
+      (click)="getTitle()"
+      (click)="getDesc()"
+    />
+  </form>
 </div>
-
-
-
