--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.html
@@ -1,11 +1,21 @@
+
+<div class="center">
+<form >
+    
+  <div id="leftBox">
+    <h1>Tilgængelige grupper</h1>
+    <mat-card class="leftGroup"> </mat-card>
+  </div>
+
+  <div id="rightBox">
+    <h1>Valgte grupper</h1>
+    <mat-card class="rightGroup"> </mat-card>
+  </div>
+ 
+  <div >
+    <input type="submit" value="Videre" id="confirmBttn" name=""(click)="showNext()" />
+  </div>
+
+</form>
+</div>
 <div class="vLine"></div>
-<div id="leftBox">
-<h1>Tilgængelige grupper</h1>
-
-</div>
-
-<div id=rightBox>
-<h1>Valgte grupper</h1>
-
-</div>
-
