--- a/angular-app/src/app/project-view/project-view.component.html
+++ b/angular-app/src/app/project-view/project-view.component.html
@@ -1,2 +1,2 @@
 <!-- <app-query-view></app-query-view> -->
-<app-query-setting-view></app-query-setting-view>
+<app-new-query-view></app-new-query-view>
