--- a/angular-app/src/app/project-view/query-setting-view/query-setting-view.component.html
+++ b/angular-app/src/app/project-view/query-setting-view/query-setting-view.component.html
@@ -4,7 +4,7 @@
 
     <form class="example-form">
         <mat-form-field class="example-full-width">
-            <input matInput placeholder="Søge Navn" value=" ">
+            <input matInput [(ngModel)]="queryName" [ngModelOptions]= "{standalone:true}" placeholder="Søge Navn" value=" ">
         </mat-form-field>
 
 
@@ -12,11 +12,11 @@
 
         <div class="fullsizeFormElement">
             <div class="halfWidth">
-                <mat-checkbox class="example-margin" [formControl]="postsCheck" >Posts</mat-checkbox>
-                <mat-checkbox class="example-margin" [formControl]="commentsCheck" >Kommentarer</mat-checkbox>
-                <mat-checkbox class="example-margin" [formControl]="likesCheck"  >Likes</mat-checkbox>
+                <mat-checkbox class="example-margin" [formControl]="postsCheck">Posts</mat-checkbox>
+                <mat-checkbox class="example-margin" [formControl]="commentsCheck">Kommentarer</mat-checkbox>
+                <mat-checkbox class="example-margin" [formControl]="likesCheck">Likes</mat-checkbox>
                 <mat-checkbox class="example-margin" [formControl]="reactionsCheck">Reaktioner</mat-checkbox>
-                <mat-checkbox class="example-margin" [formControl]="picturesCheck" >Billeder</mat-checkbox>
+                <mat-checkbox class="example-margin" [formControl]="picturesCheck">Billeder</mat-checkbox>
                 <mat-checkbox class="example-margin" [formControl]="linksCheck">Links</mat-checkbox>
             </div>
             <div class="halfWidth">
@@ -31,14 +31,13 @@
             <h3 class="header">Periode</h3>
             <mat-form-field class="matFormDate">
 
-                <input matInput [matDatepicker]="picker1" placeholder="Fra" [formControl]="date">
+                <input matInput [matDatepicker]="picker1" placeholder="Fra" [formControl]="beginDate">
                 <mat-datepicker-toggle matSuffix [for]="picker1"></mat-datepicker-toggle>
                 <mat-datepicker #picker1></mat-datepicker>
             </mat-form-field>
 
             <mat-form-field class="matFormDate">
-                <input matInput [matDatepicker]="picker2" placeholder="Til"
-                       [formControl]="serializedDate">
+                <input matInput [matDatepicker]="picker2" placeholder="Til" [formControl]="endDate">
                 <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
                 <mat-datepicker #picker2></mat-datepicker>
             </mat-form-field>
@@ -55,16 +54,14 @@
             <div class="halfWidth">
                 <mat-form-field class="example-chip-list">
                     <mat-chip-list #chipList>
-                        <mat-chip *ngFor="let tag of searchTags" [selectable]="selectable"
-                                  [removable]="removable" (removed)="remove(tag)">
+                        <mat-chip *ngFor="let tag of searchTags" [selectable]="selectable" [removable]="removable"
+                            (removed)="remove(tag)">
                             {{tag.tag}}
                             <mat-icon matChipRemove *ngIf="removable">cancel</mat-icon>
                         </mat-chip>
-                        <input placeholder="Søge Tags... "
-                               [matChipInputFor]="chipList"
-                               [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
-                               [matChipInputAddOnBlur]="addOnBlur"
-                               (matChipInputTokenEnd)="add($event)">
+                        <input placeholder="Søge Tags... " [matChipInputFor]="chipList"
+                            [matChipInputSeparatorKeyCodes]="separatorKeysCodes" [matChipInputAddOnBlur]="addOnBlur"
+                            (matChipInputTokenEnd)="add($event)">
                     </mat-chip-list>
                 </mat-form-field>
 
@@ -72,20 +69,38 @@
         </div>
 
 
-<h3 class="header">Inkluderet Grupper</h3>
+        <h3 class="header">Inkluderet Grupper</h3>
         <div class="fullsizeFormElement noHeight">
             <div class="halfWidth noGrid">
                 <div class="cardContainer">
-                    <mat-card class="mat-card-content notSelected" *ngFor="let group of groupsAvailable; let i = index" (click)="addToSelected(i)">
-                        {{group.name}}
+                    <mat-card class="mat-card-content notSelected" *ngFor="let group of groupsAvailable; let i = index"
+                        (click)="addToSelected(i)">
+                        <div style="">
+                            <div style="display: block">
+                                {{group.name}}
+                                <div style="color:blue">
+                                    {{group.desc}}
+                                </div>
+                            </div>
+                        </div>
+
+
                     </mat-card>
                 </div>
             </div>
 
             <div class="halfWidth noGrid">
                 <div class="cardContainer">
-                    <mat-card class="mat-card-content selected" *ngFor="let group of groupsSelected;  let i = index" (click)="addToAvailable(i)">
-                        {{group.name}}
+                    <mat-card class="mat-card-content selected" *ngFor="let group of groupsSelected;  let i = index"
+                        (click)="addToAvailable(i)">
+                        <div style="">
+                            <div style="display: block">
+                                {{group.name}}
+                                <div style="color:blue">
+                                    {{group.desc}}
+                                </div>
+                            </div>
+                        </div>
                     </mat-card>
                 </div>
             </div>
