--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,23 +1,29 @@
 <div class="center">
   <form>
-    <mat-form-field class="textTitle">
+    <mat-form-field class="textTitle" hintlabel="Max 25 tegn">
       <input
         matInput
+        #input
+        maxlength="25"
         placeholder="Titel"
         value=""
         name="projectName"
-        [(ngModel)]="title"
+        [(ngModel)]="this.newprojectservice.Name"
       />
     </mat-form-field>
     <br /><br /><br />
-    <mat-form-field class="textBox">
+    <mat-form-field class="textBox" hintLabel="Max 250 tegn">
       <textarea
+        input
         matInput
-        placeholder="Beskrivelse"
+        #input
+        maxlength="250"
+        placeholder="Project beskrivelse"
         name="ProjectDescription"
         id="Description"
-        [(ngModel)]="description"
+        [(ngModel)]="this.newprojectservice.Description"
       ></textarea>
+      <mat-hint align="end">{{ input.value?.length || 0 }}/250</mat-hint>
     </mat-form-field>
     <br /><br /><br />
     <input
@@ -26,8 +32,6 @@
       id="confirmBttn"
       name=""
       (click)="showNext()"
-      (click)="getTitle()"
-      (click)="getDesc()"
     />
   </form>
 </div>
