Group overview now has functionality

--- a/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
+++ b/angular-app/src/app/new-project-view/new-project-description/new-project-description.component.html
@@ -1,11 +1,13 @@
 <div class="center">
   <form>
+    <h2>Beskriv dit projekt</h2>
+    <br>
     <mat-form-field class="textTitle" hintlabel="Max 25 tegn">
       <input
         matInput
         #input
         maxlength="25"
-        placeholder="Titel"
+        placeholder="Projekt titel"
         value=""
         name="projectName"
         [(ngModel)]="this.newprojectservice.Name"
@@ -17,6 +19,7 @@
         input
         matInput
         #input
+        matTextareaAutosize matAutosizeMinRows=4 matAutosizeMaxRows=3
         maxlength="250"
         placeholder="Project beskrivelse"
         name="ProjectDescription"
