--- a/angular-app/src/app/project-view/project-view.component.html
+++ b/angular-app/src/app/project-view/project-view.component.html
@@ -1,2 +1,4 @@
-<!-- <app-query-view></app-query-view> -->
+<!-- <app-query-view></app-query-view> 
 <app-new-query-view></app-new-query-view>
+-->
+<app-query-visual-view></app-query-visual-view>
