--- a/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
+++ b/angular-app/src/app/new-project-view/new-project-groups/new-project-groups.component.css
@@ -12,7 +12,7 @@
     text-align: center;
 }
 #rightGroup{
-    height:500px;
+    float:right;
     width:50%;
 }
 #leftGroup{
@@ -51,5 +51,8 @@
  }
  .cardContainer mat-card{
     margin-bottom: 5px;
+    margin-right: 50px;
+    margin-left: 50px;
     cursor: pointer;
+    background-color: blue;
 }
