--- a/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
+++ b/angular-app/src/app/new-project-view/new-project-overview/new-project-overview.component.html
@@ -1,5 +1,5 @@
 <div id="wrapper">
-  <div>
+  
     <div class="descView">
       <h2>Projekt titel:</h2>
       <br />
@@ -7,23 +7,26 @@
       <br />
       <h2>Projekt Beskrivelse:</h2>
       <br />
+      <div id="LEFT">
       <p>{{ this.newprojectservice.Description }}</p>
     </div>
-    <div class="groupView">
+    </div>
+
+    <div id="rightBox">
       <br>
       <h2 id="groupHD">Valgte Facebook grupper</h2>
-
-      <mat-card class="rightGroup" *ngFor="let group of this.newprojectservice.ListOfGroups; let i = index">
-        <div style="">
-          <div style="display: block">
-            {{ group.name }}
-            <div style="color:blue">
-              {{ group.desc }}
+      <div class="cardContainer">
+        <mat-card class="rightGroup" *ngFor="let group of this.newprojectservice.ListOfGroups; let i = index">
+          <div style="">
+            <div style="display: block">
+              {{ group.name }}
+              <div style="color:white">
+                {{ group.desc }}
+              </div>
             </div>
           </div>
-        </div>
-      </mat-card>
-
+        </mat-card>
+      </div>
 
     </div>
     <div id="buttonContainer">
@@ -34,5 +37,4 @@
     </div>
   </div>
   <div class="vLine"></div>
-</div>
-<!--  -->
+<!-- Lav plads til searchbar. -->
